--- a/src/Layouts/Navbar/navbar.scss
+++ b/src/Layouts/Navbar/navbar.scss
@@ -16,6 +16,7 @@
         font-size: 30px;
         text-decoration: none;
         font-weight: 600;
+        font-family: "Nosifer", sans-serif;
 
         span {
           color: var(--hero_text_span_color);
@@ -43,7 +44,8 @@
         font-size: 18px;
         border: 3px solid var(--text-color);
         padding: 3px 5px;
-        border-radius: 5px;
+        border-top-left-radius: 5px;
+        border-bottom-right-radius: 5px;
         font-weight: 700;
         font-style: italic;
         cursor: pointer;
