--- a/src/componpents/Nav/nav.scss
+++ b/src/componpents/Nav/nav.scss
@@ -15,7 +15,8 @@
 
     .nav_link {
       padding: 5px 10px;
-      border-radius: 5px;
+      border-top-left-radius: 10px;
+      border-bottom-right-radius: 10px;
       text-decoration: none;
       transition: var(--transition);
 
