--- a/src/componpents/Comment/comment.scss
+++ b/src/componpents/Comment/comment.scss
@@ -25,6 +25,13 @@
         border: none;
         font-weight: 600;
         padding: 0 5px;
+        cursor: pointer;
+        transition: var(--transition);
+
+        &:hover {
+          background: rgba($color: #000000, $alpha: 0.5);
+          border: 1px solid var(--bg-color);
+        }
       }
     }
 
