--- a/src/componpents/Items/item.scss
+++ b/src/componpents/Items/item.scss
@@ -9,6 +9,7 @@
 
     .items {
       display: flex;
+      // flex-direction: column;
       align-items: start;
       gap: 10px;
       margin-bottom: 15px;
@@ -18,16 +19,50 @@
         flex-direction: column;
         width: 100%;
         cursor: pointer;
-        // position: relative;
 
         &:hover {
           transform: translate(0.8);
           //   position: absolute;
         }
-
-        img {
+        .item_img {
+          position: relative;
           width: 100%;
-          height: 300px;
+          overflow: hidden;
+
+          &:hover .overlay {
+            opacity: 1;
+          }
+
+          img {
+            width: 100%;
+            height: 300px;
+          }
+
+          .overlay {
+            position: absolute;
+            background: rgba($color: #000000, $alpha: 0.5);
+            width: 100%;
+            height: 300px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            top: 0;
+            opacity: 0;
+
+            button {
+              background: var(--bg-color);
+              color: rgb(61, 59, 59);
+              padding: 5px;
+              border-radius: 5px;
+              outline: none;
+              border: none;
+              cursor: pointer;
+
+              .food_btn {
+                text-decoration: none;
+              }
+            }
+          }
         }
       }
     }
