--- a/src/Layouts/Navbar/navbar.scss
+++ b/src/Layouts/Navbar/navbar.scss
@@ -56,6 +56,14 @@
           background: rgba($color: #000000, $alpha: 0.5);
           color: white;
         }
+
+        .login_login_btn {
+          text-decoration: none;
+        }
+
+        .singup_singup_btn {
+          text-decoration: none;
+        }
       }
     }
   }
